--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,21 +1007,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2024%8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'6,0,6,3,0,2,3,1,6'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def run(r, program):\n",
+    "    def operand(x):\n",
+    "        return r.get(x, x)\n",
+    "    def opcode(c, x):\n",
+    "        match c:\n",
+    "            case 0:\n",
+    "                r[4] = int(r[4]/(2**operand(x)))\n",
+    "            case 1: \n",
+    "                r[5] = r[5]^x\n",
+    "            case 2:\n",
+    "                r[5] = operand(x)%8\n",
+    "            case 3:\n",
+    "                return x if r[4] else None\n",
+    "            case 4:\n",
+    "                r[5] = r[5] ^ r[6]\n",
+    "            case 5:\n",
+    "                output.append(operand(x)%8)\n",
+    "            case 6:\n",
+    "                r[5] = int(r[4]/(2**operand(x)))\n",
+    "            case 7:\n",
+    "                r[6] = int(r[4]/(2**operand(x)))\n",
+    "\n",
+    "    p, output = 0, []\n",
+    "    while p < len(program):\n",
+    "        c, x = program[p:p+2]\n",
+    "        # print(c, x)\n",
+    "        jump = opcode(c, x)\n",
+    "        # print(p, jump, r, output)\n",
+    "        p = jump if jump != None else p+2\n",
+    "\n",
+    "    return output, r\n",
+    "\n",
+    "def day17():\n",
+    "    a, b, c, _, program = data(17, lambda x: [int(n) if n else '' for n in (x.split(': ')[-1].split(','))])\n",
+    "    r = {\n",
+    "        4: a[0],\n",
+    "        5: b[0],\n",
+    "        6: c[0],\n",
+    "    }\n",
+    "    output, _ = run(r, program)\n",
+    "    return ','.join([str(x) for x in output])\n",
+    "\n",
+    "day17()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['###############', '#.......#....E#', '#.#.###.#.###.#', '#.....#.#...#.#', '#.###.#####.#.#', '#.#.#.......#.#', '#.#.#####.###.#', '#...........#.#', '###.#.#####.#.#', '#...#.....#.#.#', '#.#.#.###.#.#.#', '#.....#...#.#.#', '#.###.#.#.#.#.#', '#S..#.....#...#', '###############']\n"
+      "([], {6: 9, 5: 1})\n",
+      "([0, 1, 2], {4: 10})\n",
+      "([4, 2, 5, 6, 7, 7, 7, 7, 3, 1, 0], {4: 0})\n",
+      "([], {5: 26})\n",
+      "([], {5: 44354, 6: 43690})\n",
+      "([4, 6, 3, 5, 6, 3, 5, 2, 1, 0], {4: 0})\n"
      ]
     }
    ],
    "source": [
-    "def day17():\n",
-    "    print(data(0))\n",
-    "day17()"
+    "print(run({6: 9}, [2,6]))\n",
+    "print(run({4:10}, [5,0,5,1,5,4]))\n",
+    "print(run({4:2024}, [0,1,5,4,3,0]))\n",
+    "print(run({5: 29}, [1,7]))\n",
+    "print(run({5:2024,6:43690}, [4,0]))\n",
+    "print(run({4:729}, [0,1,5,4,3,0]))"
    ]
   }
  ],
