--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,6 @@
     "\n",
     "def search(start, get_neighbors, end_condition=lambda _, __: False, method='dfs', permutations=False):\n",
     "    q, visited = [(0, start)] if method == 'dijkstra' else deque([(0, start)]), {}\n",
-    "\n",
     "    while q:\n",
     "        if method == 'dijkstra':\n",
     "            distance, current = heapq.heappop(q)\n",
@@ -55,15 +54,23 @@
     "        visited[current] = distance\n",
     "    return visited, None\n",
     "\n",
+    "def binary_search(fn, low, high, target):\n",
+    "    if high >= low:\n",
+    "        mid = (high + low) // 2\n",
+    "        if fn(mid) == target:\n",
+    "            return mid\n",
+    "        return binary_search(fn, low, mid - 1, target) if fn(mid) > target else binary_search(fn, mid + 1, high, target)\n",
+    "    return -1\n",
+    "\n",
     "def sum_series(start, stop):\n",
     "    n = (stop - start)\n",
     "    sum = start + stop\n",
     "    return n * sum // 2\n",
     "\n",
-    "def debug_array(arr, coords, p=True):\n",
+    "def debug_array(arr, coords, p=True, v='X'):\n",
     "    arr = arr.copy()\n",
     "    for i in coords:\n",
-    "        arr[*i] = 'X'\n",
+    "        arr[*i] = v\n",
     "    if p:\n",
     "        print(arr)\n",
     "    return arr\n",
@@ -1009,21 +1016,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "min() iterable argument is empty",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[194], line 61\u001b[0m\n\u001b[0;32m     57\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mmin\u001b[39m(results)\n\u001b[0;32m     59\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([\u001b[38;5;28mstr\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m output]), reverse_input()\n\u001b[1;32m---> 61\u001b[0m \u001b[43mday17\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[194], line 59\u001b[0m, in \u001b[0;36mday17\u001b[1;34m()\u001b[0m\n\u001b[0;32m     56\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(itertools\u001b[38;5;241m.\u001b[39mchain\u001b[38;5;241m.\u001b[39mfrom_iterable(_reverse_input(\u001b[38;5;241m1\u001b[39m, a))))\n\u001b[0;32m     57\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mmin\u001b[39m(results)\n\u001b[1;32m---> 59\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([\u001b[38;5;28mstr\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m output]), \u001b[43mreverse_input\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[194], line 57\u001b[0m, in \u001b[0;36mday17.<locals>.reverse_input\u001b[1;34m()\u001b[0m\n\u001b[0;32m     55\u001b[0m a \u001b[38;5;241m=\u001b[39m reverse_output(program[\u001b[38;5;241m0\u001b[39m], (\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m7\u001b[39m))\n\u001b[0;32m     56\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(itertools\u001b[38;5;241m.\u001b[39mchain\u001b[38;5;241m.\u001b[39mfrom_iterable(_reverse_input(\u001b[38;5;241m1\u001b[39m, a))))\n\u001b[1;32m---> 57\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mmin\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mresults\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mValueError\u001b[0m: min() iterable argument is empty"
-     ]
+     "data": {
+      "text/plain": [
+       "('6,0,6,3,0,2,3,1,6', 236539226447469)"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1093,22 +1097,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Register A: 729', 'Register B: 0', 'Register C: 0', '', 'Program: 0,1,5,4,3,0']\n"
+      "3835 268\n"
      ]
     }
    ],
    "source": [
-    "def day18():\n",
-    "    print(data(0))\n",
+    "def day18(size, time):\n",
+    "    grid = np.zeros((size+1, size+1))\n",
+    "    corruptions = data(18, lambda x: [int(n) for n in x.split(',')])\n",
+    "\n",
+    "    # for x, y in corruptions:\n",
+    "    #     grid[y, x] = 1\n",
+    "    for i in range(time):\n",
+    "        y, x = corruptions[i]\n",
+    "        grid[y, x] = 1\n",
+    "\n",
+    "    def get_neighbors(node, _):\n",
+    "        for v in (1, -1, 1j, -1j):\n",
+    "            new = node + v\n",
+    "            y, x = yx(new)\n",
+    "            if not (y >= 0 and x >= 0 and y <= size and x <= size):\n",
+    "                continue\n",
+    "            if not grid[y, x]:\n",
+    "                yield new\n",
+    "\n",
+    "    def end_condition(node, _):\n",
+    "        return node == size+1j*size\n",
+    "    \n",
+    "    visited, _ = search(0, get_neighbors, end_condition)\n",
+    "    print(len(visited), visited[_])\n",
+    "\n",
+    "    # debug_array(grid, [yx(x) for x in visited.keys()], v=2)\n",
+    "\n",
+    "day18(70, 1024)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(268, '64,11')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def day18(size=70):\n",
+    "    corruptions = data(18, lambda x: [int(n) for n in x.split(',')])\n",
+    "    _grid = np.zeros((size+1, size+1))\n",
+    "    end = size+1j*size\n",
+    "\n",
+    "    def shortest_path(grid):\n",
+    "        def get_neighbors(node, _):\n",
+    "            for v in (1, -1, 1j, -1j):\n",
+    "                new = node + v\n",
+    "                y, x = yx(new)\n",
+    "                if not (y >= 0 and x >= 0 and y <= size and x <= size):\n",
+    "                    continue\n",
+    "                if not grid[y, x]:\n",
+    "                    yield new\n",
+    "        def end_condition(node, _):\n",
+    "            return node == end\n",
+    "        \n",
+    "        visited, _ = search(0, get_neighbors, end_condition)\n",
+    "        return visited.get(end)\n",
+    "\n",
+    "    def corrupted_path(time):\n",
+    "        grid = _grid.copy()\n",
+    "        for i in range(time):\n",
+    "            x, y = corruptions[i]\n",
+    "            grid[y, x] = 1\n",
+    "        return shortest_path(grid), grid\n",
+    "    \n",
+    "    part1, _ = corrupted_path(1024)\n",
+    "\n",
+    "    def target(x):\n",
+    "        n, grid = corrupted_path(x)\n",
+    "        if not n:\n",
+    "            return 1\n",
+    "        x, y = corruptions[x+1]\n",
+    "        grid[y, x] = 1\n",
+    "        if not shortest_path(grid):\n",
+    "            return 0\n",
+    "        return -1\n",
+    "\n",
+    "    time = binary_search(target, 1024, len(corruptions)-2, 0)\n",
+    "    x, y = corruptions[time]\n",
+    "    return part1, f'{x},{y}'\n",
     "\n",
     "day18()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n"
    ]
   }
  ],
