--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -1097,50 +1097,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3835 268\n"
-     ]
-    }
-   ],
-   "source": [
-    "def day18(size, time):\n",
-    "    grid = np.zeros((size+1, size+1))\n",
-    "    corruptions = data(18, lambda x: [int(n) for n in x.split(',')])\n",
-    "\n",
-    "    # for x, y in corruptions:\n",
-    "    #     grid[y, x] = 1\n",
-    "    for i in range(time):\n",
-    "        y, x = corruptions[i]\n",
-    "        grid[y, x] = 1\n",
-    "\n",
-    "    def get_neighbors(node, _):\n",
-    "        for v in (1, -1, 1j, -1j):\n",
-    "            new = node + v\n",
-    "            y, x = yx(new)\n",
-    "            if not (y >= 0 and x >= 0 and y <= size and x <= size):\n",
-    "                continue\n",
-    "            if not grid[y, x]:\n",
-    "                yield new\n",
-    "\n",
-    "    def end_condition(node, _):\n",
-    "        return node == size+1j*size\n",
-    "    \n",
-    "    visited, _ = search(0, get_neighbors, end_condition)\n",
-    "    print(len(visited), visited[_])\n",
-    "\n",
-    "    # debug_array(grid, [yx(x) for x in visited.keys()], v=2)\n",
-    "\n",
-    "day18(70, 1024)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [
@@ -1204,12 +1160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['5,4', '4,2', '4,5', '3,0', '2,1', '6,3', '2,4', '1,5', '0,6', '3,3', '2,6', '5,1', '1,2', '5,5', '2,5', '6,5', '1,4', '0,4', '6,4', '1,1', '6,1', '1,0', '0,5', '1,6', '2,0']\n"
+     ]
+    }
+   ],
    "source": [
+    "def day19():\n",
+    "    print(data(0))\n",
     "\n",
-    "\n"
+    "day19()"
    ]
   }
  ],
