--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,20 +1160,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['5,4', '4,2', '4,5', '3,0', '2,1', '6,3', '2,4', '1,5', '0,6', '3,3', '2,6', '5,1', '1,2', '5,5', '2,5', '6,5', '1,4', '0,4', '6,4', '1,1', '6,1', '1,0', '0,5', '1,6', '2,0']\n"
+      "317\n"
      ]
     }
    ],
    "source": [
     "def day19():\n",
-    "    print(data(0))\n",
+    "    text = data(19)\n",
+    "    patterns = sorted(text[0].split(', '), key=lambda x: -len(x))\n",
+    "    combinations = text[2:]\n",
+    "\n",
+    "    # print(patterns, combinations)\n",
+    "\n",
+    "    @cache\n",
+    "    def compose(c):\n",
+    "        if not c:\n",
+    "            return True\n",
+    "        for p in patterns:\n",
+    "            if c.startswith(p):\n",
+    "                if compose(c[len(p):]):\n",
+    "                    return True\n",
+    "        return False\n",
+    "\n",
+    "    print(sum([1 if compose(c) else 0 for c in combinations]))\n",
+    "\n",
+    "\n",
+    "day19()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day19():\n",
+    "    text = data(19)\n",
+    "    patterns = sorted(text[0].split(', '), key=lambda x: -len(x))\n",
+    "    combinations = text[2:]\n",
+    "\n",
+    "    @cache\n",
+    "    def compose(c):\n",
+    "        if not c:\n",
+    "            return 1\n",
+    "        count = 0\n",
+    "        for p in patterns:\n",
+    "            if c.startswith(p):\n",
+    "                count += compose(c[len(p):])\n",
+    "            # print('here', c, p, count)\n",
+    "        return count\n",
+    "\n",
+    "    print(sum([compose(c) for c in combinations]))\n",
+    "\n",
     "\n",
     "day19()"
    ]
