--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -1160,58 +1160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "317\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(317, 883443544805484)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def day19():\n",
     "    text = data(19)\n",
-    "    patterns = sorted(text[0].split(', '), key=lambda x: -len(x))\n",
-    "    combinations = text[2:]\n",
-    "\n",
-    "    # print(patterns, combinations)\n",
-    "\n",
-    "    @cache\n",
-    "    def compose(c):\n",
-    "        if not c:\n",
-    "            return True\n",
-    "        for p in patterns:\n",
-    "            if c.startswith(p):\n",
-    "                if compose(c[len(p):]):\n",
-    "                    return True\n",
-    "        return False\n",
-    "\n",
-    "    print(sum([1 if compose(c) else 0 for c in combinations]))\n",
-    "\n",
-    "\n",
-    "day19()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16\n"
-     ]
-    }
-   ],
-   "source": [
-    "def day19():\n",
-    "    text = data(19)\n",
-    "    patterns = sorted(text[0].split(', '), key=lambda x: -len(x))\n",
+    "    patterns = text[0].split(', ')\n",
     "    combinations = text[2:]\n",
     "\n",
     "    @cache\n",
@@ -1222,13 +1188,31 @@
     "        for p in patterns:\n",
     "            if c.startswith(p):\n",
     "                count += compose(c[len(p):])\n",
-    "            # print('here', c, p, count)\n",
     "        return count\n",
-    "\n",
-    "    print(sum([compose(c) for c in combinations]))\n",
-    "\n",
+    "    \n",
+    "    results = list(filter(lambda x: x, [compose(c) for c in combinations]))\n",
+    "    return len(results), sum(results)\n",
     "\n",
     "day19()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['r, wr, b, g, bwu, rb, gb, br', '', 'brwrr', 'bggr', 'gbbr', 'rrbgbr', 'ubwu', 'bwurrg', 'brgr', 'bbrgwb']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day20():\n",
+    "    print(data(0))\n",
+    "day20()"
    ]
   }
  ],
