--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -1344,6 +1344,147 @@
     "\n",
     "day20()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len((1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20,\n",
+       " (19+1j),\n",
+       " (18+2j),\n",
+       " (17+3j),\n",
+       " (16+4j),\n",
+       " (15+5j),\n",
+       " (14+6j),\n",
+       " (13+7j),\n",
+       " (12+8j),\n",
+       " (11+9j),\n",
+       " (10+10j),\n",
+       " (9+11j),\n",
+       " (8+12j),\n",
+       " (7+13j),\n",
+       " (6+14j),\n",
+       " (5+15j),\n",
+       " (4+16j),\n",
+       " (3+17j),\n",
+       " (2+18j),\n",
+       " (1+19j),\n",
+       " 20j]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[sum(x) for x in itertools.combinations_with_replacement((1, 1j), 20)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({56: 39, 52: 31, 54: 29, 58: 25, 60: 23, 72: 22, 62: 20, 64: 19, 68: 14, 70: 12, 66: 12, 74: 4, 76: 3})\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def day20():\n",
+    "    grid = np.array(data(20, list))\n",
+    "    ymax, xmax = grid.shape\n",
+    "    start = icoord(*np.argwhere(grid == 'S')[0])\n",
+    "    end = icoord(*np.argwhere(grid == 'E')[0])\n",
+    "    walls = {icoord(*x) for x in np.argwhere(grid=='#')}\n",
+    "\n",
+    "    def get_neighbors(node, _):\n",
+    "        for v in (1, -1, 1j, -1j):\n",
+    "            new = node + v\n",
+    "            y, x = yx(new)\n",
+    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                continue\n",
+    "            if new not in walls:\n",
+    "                yield new\n",
+    "    def end_condition(node, _):\n",
+    "        return node == end\n",
+    "    \n",
+    "    visited, _ = search(start, get_neighbors, end_condition)\n",
+    "\n",
+    "    cheats = {}\n",
+    "    # cheats = Counter()\n",
+    "    def get_cheats(node, n):\n",
+    "        for quadrant in [(1, 1j), (-1, 1j), (1, -1j), (-1, -1j)]:\n",
+    "            for i in range(2, n+1):\n",
+    "                for v in itertools.combinations_with_replacement(quadrant, i):\n",
+    "                    new = node + sum(v)\n",
+    "                    y, x = yx(new)\n",
+    "                    if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                        continue\n",
+    "                    if new not in walls:\n",
+    "                        saved = visited[new]-visited[node]-i\n",
+    "                        if saved > 50:\n",
+    "                            cheats[(node, new)] = saved\n",
+    "                            # cheats[saved] += 1\n",
+    "\n",
+    "    for node in visited:\n",
+    "        get_cheats(node, 20)\n",
+    "\n",
+    "    savings = Counter(cheats.values())\n",
+    "    print(savings)\n",
+    "    print(sum([savings[x] for x in savings if x >=100]))\n",
+    "\n",
+    "day20()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1256.6370614359173"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.pi*20*20"
+   ]
   }
  ],
  "metadata": {
