--- a/2024/2024.ipynb
+++ b/2024/2024.ipynb
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "(6041, 4884)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,25 +326,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (5,) + inhomogeneous part.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[101], line 31\u001b[0m\n\u001b[0;32m     28\u001b[0m         part2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m([r[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m tpe\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m x: run_guard(x), original)])\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m part1, part2\n\u001b[1;32m---> 31\u001b[0m \u001b[43mday6\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[101], line 2\u001b[0m, in \u001b[0;36mday6\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mday6\u001b[39m():\n\u001b[1;32m----> 2\u001b[0m     grid \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m     ymax, xmax \u001b[38;5;241m=\u001b[39m grid\u001b[38;5;241m.\u001b[39mshape\n\u001b[0;32m      4\u001b[0m     start \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margwhere(grid \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m^\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n",
-      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (5,) + inhomogeneous part."
-     ]
+     "data": {
+      "text/plain": [
+       "(4374, 1705)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "def day6():\n",
-    "    grid = np.array(data(0, list))\n",
+    "    grid = np.array(data(6, list))\n",
     "    ymax, xmax = grid.shape\n",
     "    start = np.argwhere(grid == '^')[0]\n",
     "    grid[*start] = '.'\n",
@@ -378,20 +376,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11387\n"
+      "20928985450275\n"
      ]
     }
    ],
    "source": [
     "def day7():\n",
-    "    equations = data(0, lambda x: [int(n) for n in re.split(r' |: ', x)])\n",
+    "    equations = data(7, lambda x: [int(n) for n in re.split(r' |: ', x)])\n",
     "    \n",
     "    def check(n, acc, arr):\n",
     "        if not arr:\n",
@@ -424,7 +422,7 @@
        "(7710205485870, 20928985450275)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,113 +1196,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "84 ((5+7j), 0) {((1+3j), 0): 0, ((1+2j), 0): 1, ((1+1j), 0): 2, ((2+1j), 0): 3, ((3+1j), 0): 4, ((3+2j), 0): 5, ((3+3j), 0): 6, ((4+3j), 0): 7, ((5+3j), 0): 8, ((5+2j), 0): 9, ((5+1j), 0): 10, ((6+1j), 0): 11, ((7+1j), 0): 12, ((7+2j), 0): 13, ((7+3j), 0): 14, ((7+4j), 0): 15, ((7+5j), 0): 16, ((7+6j), 0): 17, ((7+7j), 0): 18, ((8+7j), 0): 19, ((9+7j), 0): 20, ((9+6j), 0): 21, ((9+5j), 0): 22, ((9+4j), 0): 23, ((9+3j), 0): 24, ((9+2j), 0): 25, ((9+1j), 0): 26, ((10+1j), 0): 27, ((11+1j), 0): 28, ((12+1j), 0): 29, ((13+1j), 0): 30, ((13+2j), 0): 31, ((13+3j), 0): 32, ((12+3j), 0): 33, ((11+3j), 0): 34, ((11+4j), 0): 35, ((11+5j), 0): 36, ((12+5j), 0): 37, ((13+5j), 0): 38, ((13+6j), 0): 39, ((13+7j), 0): 40, ((12+7j), 0): 41, ((11+7j), 0): 42, ((11+8j), 0): 43, ((11+9j), 0): 44, ((12+9j), 0): 45, ((13+9j), 0): 46, ((13+10j), 0): 47, ((13+11j), 0): 48, ((12+11j), 0): 49, ((11+11j), 0): 50, ((11+12j), 0): 51, ((11+13j), 0): 52, ((10+13j), 0): 53, ((9+13j), 0): 54, ((9+12j), 0): 55, ((9+11j), 0): 56, ((9+10j), 0): 57, ((9+9j), 0): 58, ((8+9j), 0): 59, ((7+9j), 0): 60, ((7+10j), 0): 61, ((7+11j), 0): 62, ((7+12j), 0): 63, ((7+13j), 0): 64, ((6+13j), 0): 65, ((5+13j), 0): 66, ((5+12j), 0): 67, ((5+11j), 0): 68, ((4+11j), 0): 69, ((3+11j), 0): 70, ((3+12j), 0): 71, ((3+13j), 0): 72, ((2+13j), 0): 73, ((1+13j), 0): 74, ((1+12j), 0): 75, ((1+11j), 0): 76, ((1+10j), 0): 77, ((1+9j), 0): 78, ((2+9j), 0): 79, ((3+9j), 0): 80, ((3+8j), 0): 81, ((3+7j), 0): 82, ((4+7j), 0): 83, ((5+7j), 0): 84}\n"
-     ]
-    }
-   ],
-   "source": [
-    "def day20():\n",
-    "    grid = np.array(data(0, list))\n",
-    "    ymax, xmax = grid.shape\n",
-    "    start = icoord(*np.argwhere(grid == 'S')[0])\n",
-    "    end = icoord(*np.argwhere(grid == 'E')[0])\n",
-    "    walls = {icoord(*x) for x in np.argwhere(grid=='#')}\n",
-    "\n",
-    "    def get_neighbors(current, _):\n",
-    "        node, cheat = current\n",
-    "        for v in (1, -1, 1j, -1j):\n",
-    "            new = node + v\n",
-    "            y, x = yx(new)\n",
-    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                continue\n",
-    "            if new not in walls:\n",
-    "                yield (new, cheat)\n",
-    "            elif cheat:\n",
-    "                yield (new, 0)\n",
-    "    def end_condition(node, _):\n",
-    "        return node[0] == end\n",
-    "    \n",
-    "    visited, c = search((start, 0), get_neighbors, end_condition)\n",
-    "    # visited, c = search((start, 1), get_neighbors, end_condition)\n",
-    "    print(visited[c], c, visited)\n",
-    "\n",
-    "day20()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{(1+3j): 0, (1+2j): 1, (1+1j): 2, (2+1j): 3, (3+1j): 4, (3+2j): 5, (3+3j): 6, (4+3j): 7, (5+3j): 8, (5+2j): 9, (5+1j): 10, (6+1j): 11, (7+1j): 12, (7+2j): 13, (7+3j): 14, (7+4j): 15, (7+5j): 16, (7+6j): 17, (7+7j): 18, (8+7j): 19, (9+7j): 20, (9+6j): 21, (9+5j): 22, (9+4j): 23, (9+3j): 24, (9+2j): 25, (9+1j): 26, (10+1j): 27, (11+1j): 28, (12+1j): 29, (13+1j): 30, (13+2j): 31, (13+3j): 32, (12+3j): 33, (11+3j): 34, (11+4j): 35, (11+5j): 36, (12+5j): 37, (13+5j): 38, (13+6j): 39, (13+7j): 40, (12+7j): 41, (11+7j): 42, (11+8j): 43, (11+9j): 44, (12+9j): 45, (13+9j): 46, (13+10j): 47, (13+11j): 48, (12+11j): 49, (11+11j): 50, (11+12j): 51, (11+13j): 52, (10+13j): 53, (9+13j): 54, (9+12j): 55, (9+11j): 56, (9+10j): 57, (9+9j): 58, (8+9j): 59, (7+9j): 60, (7+10j): 61, (7+11j): 62, (7+12j): 63, (7+13j): 64, (6+13j): 65, (5+13j): 66, (5+12j): 67, (5+11j): 68, (4+11j): 69, (3+11j): 70, (3+12j): 71, (3+13j): 72, (2+13j): 73, (1+13j): 74, (1+12j): 75, (1+11j): 76, (1+10j): 77, (1+9j): 78, (2+9j): 79, (3+9j): 80, (3+8j): 81, (3+7j): 82, (4+7j): 83, (5+7j): 84}\n",
-      "140\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "def day20():\n",
-    "    grid = np.array(data(20, list))\n",
-    "    ymax, xmax = grid.shape\n",
-    "    start = icoord(*np.argwhere(grid == 'S')[0])\n",
-    "    end = icoord(*np.argwhere(grid == 'E')[0])\n",
-    "    walls = {icoord(*x) for x in np.argwhere(grid=='#')}\n",
-    "    candidates = set()\n",
-    "\n",
-    "    def get_neighbors(node, _):\n",
-    "        for v in (1, -1, 1j, -1j):\n",
-    "            new = node + v\n",
-    "            y, x = yx(new)\n",
-    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                continue\n",
-    "            if new in walls:\n",
-    "                candidates.add(new)\n",
-    "            if new not in walls:\n",
-    "                yield new\n",
-    "    def end_condition(node, _):\n",
-    "        return node == end\n",
-    "    \n",
-    "    visited, _ = search(start, get_neighbors, end_condition)\n",
-    "    base = visited[end]\n",
-    "\n",
-    "    print(len(candidates))\n",
-    "\n",
-    "    c = Counter()\n",
-    "    w = list(walls)\n",
-    "    print(len(w))\n",
-    "    # for i in range(len(w)):\n",
-    "    #     walls = list(w[:i]+w[i+1:])\n",
-    "    #     visited, _ = search(start, get_neighbors, end_condition)\n",
-    "    #     c[visited[end]] += 1\n",
-    "\n",
-    "    # print(c)\n",
-    "    print(sum([c[x] for x in c if base-x >=100]))\n",
-    "\n",
-    "day20()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1404\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(1404, 1010981)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1327,163 +1230,52 @@
     "        return node == end\n",
     "    \n",
     "    visited, _ = search(start, get_neighbors, end_condition)\n",
+    "    \n",
+    "    def get_cheats(n):\n",
+    "        cheats = {}\n",
+    "        def get_cheats(node, n):\n",
+    "            for quadrant in [(1, 1j), (-1, 1j), (1, -1j), (-1, -1j)]:\n",
+    "                for i in range(2, n+1):\n",
+    "                    for v in itertools.combinations_with_replacement(quadrant, i):\n",
+    "                        new = node + sum(v)\n",
+    "                        y, x = yx(new)\n",
+    "                        if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
+    "                            continue\n",
+    "                        if new not in walls:\n",
+    "                            saved = visited[new]-visited[node]-i\n",
+    "                            if saved >= 100:\n",
+    "                                cheats[(node, new)] = saved\n",
+    "        \n",
+    "        for node in visited:\n",
+    "            get_cheats(node, n)\n",
+    "        return cheats\n",
     "\n",
-    "    savings = Counter()\n",
-    "    for node in visited:\n",
-    "        for v in (1, -1, 1j, -1j):\n",
-    "            new = node+2*v\n",
-    "            y, x = yx(new)\n",
-    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                continue\n",
-    "            if node+v in walls and new not in walls:\n",
-    "                saved = visited[new]-visited[node]-2\n",
-    "                if saved > 0:\n",
-    "                    savings[saved] += 1\n",
-    "\n",
-    "    print(sum([savings[x] for x in savings if x >=100]))\n",
+    "    def get_savings(cheats):\n",
+    "        savings = Counter(cheats.values())\n",
+    "        return sum([savings[x] for x in savings])\n",
+    "    \n",
+    "    return get_savings(get_cheats(2)), get_savings(get_cheats(20))\n",
     "\n",
     "day20()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len((1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[20,\n",
-       " (19+1j),\n",
-       " (18+2j),\n",
-       " (17+3j),\n",
-       " (16+4j),\n",
-       " (15+5j),\n",
-       " (14+6j),\n",
-       " (13+7j),\n",
-       " (12+8j),\n",
-       " (11+9j),\n",
-       " (10+10j),\n",
-       " (9+11j),\n",
-       " (8+12j),\n",
-       " (7+13j),\n",
-       " (6+14j),\n",
-       " (5+15j),\n",
-       " (4+16j),\n",
-       " (3+17j),\n",
-       " (2+18j),\n",
-       " (1+19j),\n",
-       " 20j]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[sum(x) for x in itertools.combinations_with_replacement((1, 1j), 20)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counter({56: 39, 52: 31, 54: 29, 58: 25, 60: 23, 72: 22, 62: 20, 64: 19, 68: 14, 70: 12, 66: 12, 74: 4, 76: 3})\n",
-      "0\n"
+      "['###############', '#...#...#.....#', '#.#.#.#.#.###.#', '#S#...#.#.#...#', '#######.#.#.###', '#######.#.#...#', '#######.#.###.#', '###..E#...#...#', '###.#######.###', '#...###...#...#', '#.#####.#.###.#', '#.#...#.#.#...#', '#.#.#.#.#.#.###', '#...#...#...###', '###############']\n"
      ]
     }
    ],
    "source": [
-    "def day20():\n",
-    "    grid = np.array(data(20, list))\n",
-    "    ymax, xmax = grid.shape\n",
-    "    start = icoord(*np.argwhere(grid == 'S')[0])\n",
-    "    end = icoord(*np.argwhere(grid == 'E')[0])\n",
-    "    walls = {icoord(*x) for x in np.argwhere(grid=='#')}\n",
-    "\n",
-    "    def get_neighbors(node, _):\n",
-    "        for v in (1, -1, 1j, -1j):\n",
-    "            new = node + v\n",
-    "            y, x = yx(new)\n",
-    "            if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                continue\n",
-    "            if new not in walls:\n",
-    "                yield new\n",
-    "    def end_condition(node, _):\n",
-    "        return node == end\n",
-    "    \n",
-    "    visited, _ = search(start, get_neighbors, end_condition)\n",
-    "\n",
-    "    cheats = {}\n",
-    "    # cheats = Counter()\n",
-    "    def get_cheats(node, n):\n",
-    "        for quadrant in [(1, 1j), (-1, 1j), (1, -1j), (-1, -1j)]:\n",
-    "            for i in range(2, n+1):\n",
-    "                for v in itertools.combinations_with_replacement(quadrant, i):\n",
-    "                    new = node + sum(v)\n",
-    "                    y, x = yx(new)\n",
-    "                    if not (y >= 0 and x >= 0 and y < ymax and x < xmax):\n",
-    "                        continue\n",
-    "                    if new not in walls:\n",
-    "                        saved = visited[new]-visited[node]-i\n",
-    "                        if saved > 50:\n",
-    "                            cheats[(node, new)] = saved\n",
-    "                            # cheats[saved] += 1\n",
-    "\n",
-    "    for node in visited:\n",
-    "        get_cheats(node, 20)\n",
-    "\n",
-    "    savings = Counter(cheats.values())\n",
-    "    print(savings)\n",
-    "    print(sum([savings[x] for x in savings if x >=100]))\n",
-    "\n",
-    "day20()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1256.6370614359173"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "math.pi*20*20"
+    "def day21():\n",
+    "    print(data(0))\n",
+    "day21()"
    ]
   }
  ],
